--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -6,6 +6,8 @@ webdriver {
 headless.mode = true
 
 serenity {
+    maintain.session = true
+    restart.browser.for.each = never
     take.screenshots = FOR_FAILURES
 }
 #
