--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -3,7 +3,7 @@ webdriver {
   driver = firefox
   autodownload = true
 }
-headless.mode = true
+headless.mode = false
 
 serenity {
     maintain.session = true
